--- a/style.css
+++ b/style.css
@@ -118,6 +118,19 @@ label {
     foint-size: 20px
 }
 
+.barra{ 
+    backgound-color: var(--fundo-senha);
+    height: 30px;
+    width: 100%
+}
+
+.forca {
+    height: 30px;
+    position: relative;
+    bottom; 30  px;
+}
+
+}
 @media screen and (min-width: 768px) {
     .parametro-coluna__senha{
         flex-direction: row;
